[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Maps/Map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Icons/right.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Buttons/button_rectangle_border.png" type="Texture" id=3]
[ext_resource path="res://Assets/Towers/towerDefense_tile249.png" type="Texture" id=4]
[ext_resource path="res://Assets/Towers/towerDefense_tile251.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Art/BackGround.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/fastForward.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/fastForwardBlack.png" type="Texture" id=9]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=10]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=11]
[ext_resource path="res://Resources/Fonts/kfn_50_o1.tres" type="DynamicFont" id=12]
[ext_resource path="res://Resources/Fonts/kfn_30_o1.tres" type="DynamicFont" id=13]
[ext_resource path="res://Assets/Icons/home.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=15]
[ext_resource path="res://Scenes/ScriptingScenes/TerminalUI.tscn" type="PackedScene" id=16]

[node name="GameScene" type="Node2D"]
script = ExtResource( 10 )

[node name="Map1" parent="." instance=ExtResource( 1 )]

[node name="WaveTimer" type="Timer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GameControlButtons" type="Control" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.011
anchor_right = 1.0
anchor_bottom = 1.011
margin_left = -416.0
margin_top = -151.92
margin_right = -16.0
margin_bottom = -31.92
rect_min_size = Vector2( 400, 120 )

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/GameControlButtons"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/GameControlButtons/MarginContainer"]
margin_left = 128.0
margin_top = 25.0
margin_right = 272.0
margin_bottom = 95.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="PlayButton" type="TextureButton" parent="UI/HUD/GameControlButtons/MarginContainer/HBoxContainer"]
pause_mode = 2
self_modulate = Color( 0.364706, 0.580392, 0.94902, 1 )
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="FFButton" type="TextureButton" parent="UI/HUD/GameControlButtons/MarginContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
expand = true
flip_v = true

[node name="TowerSlider" type="Control" parent="UI/HUD"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -420.0
margin_right = 120.0
rect_min_size = Vector2( 120, 400 )

[node name="TextureRect" type="TextureRect" parent="UI/HUD/TowerSlider"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/TowerSlider"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD/TowerSlider/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 410.0
rect_min_size = Vector2( 100, 400 )
custom_constants/separation = 25

[node name="Gun" type="TextureButton" parent="UI/HUD/TowerSlider/MarginContainer/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/TowerSlider/MarginContainer/BuildBar/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 4 )
expand = true

[node name="Missile" type="TextureButton" parent="UI/HUD/TowerSlider/MarginContainer/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 105.0
margin_right = 90.0
margin_bottom = 185.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/TowerSlider/MarginContainer/BuildBar/Missile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 5 )
expand = true

[node name="TopBar" type="Control" parent="UI/HUD"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )

[node name="InfoBar" type="ColorRect" parent="UI/HUD/TopBar"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )

[node name="H" type="HBoxContainer" parent="UI/HUD/TopBar/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Symbol" type="Label" parent="UI/HUD/TopBar/InfoBar/H"]
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 12 )
text = "$"
align = 2
valign = 1

[node name="Money" type="Label" parent="UI/HUD/TopBar/InfoBar/H"]
margin_left = 124.0
margin_right = 234.0
margin_bottom = 60.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 13 )
text = "100"
align = 2
valign = 1

[node name="Icon" type="TextureRect" parent="UI/HUD/TopBar/InfoBar/H"]
margin_left = 742.0
margin_right = 802.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
texture = ExtResource( 14 )
expand = true

[node name="HP" type="TextureProgress" parent="UI/HUD/TopBar/InfoBar/H"]
margin_left = 806.0
margin_top = 15.0
margin_right = 1206.0
margin_bottom = 45.0
rect_min_size = Vector2( 400, 30 )
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 15 )
tint_under = Color( 0.215686, 0.215686, 0.215686, 1 )
tint_progress = Color( 0.105882, 0.929412, 0.215686, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UI/HUD/TopBar/InfoBar/H/HP"]

[node name="Control" type="Control" parent="UI/HUD/TopBar/InfoBar/H"]
margin_left = 1210.0
margin_right = 1280.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 0 )

[node name="TerminalUI" parent="UI/HUD" instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -216.0
margin_top = -281.0
margin_right = 224.0
margin_bottom = -16.0
rect_min_size = Vector2( 350, 200 )

[connection signal="pressed" from="UI/HUD/GameControlButtons/MarginContainer/HBoxContainer/PlayButton" to="UI" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="UI/HUD/GameControlButtons/MarginContainer/HBoxContainer/FFButton" to="UI" method="_on_FFButton_pressed"]
